--- a/Belote/app/build.gradle
+++ b/Belote/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     signingConfigs {
         debug {
-            keyAlias 'belot'
+            keyAlias 'androiddebug'
             keyPassword 'android'
             storeFile file('debug.jks')
             storePassword 'android'
@@ -46,5 +46,7 @@ dependencies {
     })
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile 'com.google.firebase:firebase-core:11.4.0'
+    compile 'com.google.firebase:firebase-auth:11.4.0'
+    compile 'com.google.android.gms:play-services-auth:11.4.0'
 }
 apply plugin: 'com.google.gms.google-services'
