--- a/Belote/app/build.gradle
+++ b/Belote/app/build.gradle
@@ -48,5 +48,7 @@ dependencies {
     compile 'com.google.firebase:firebase-core:11.4.0'
     compile 'com.google.firebase:firebase-auth:11.4.0'
     compile 'com.google.android.gms:play-services-auth:11.4.0'
+    compile 'com.google.firebase:firebase-database:11.4.0'
+
 }
 apply plugin: 'com.google.gms.google-services'
