--- a/Belote/app/src/main/AndroidManifest.xml
+++ b/Belote/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fuseteam.games.belote">
+    package="com.elkriefy.games.belote">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -12,8 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.fuseteam.games.belote.activities.MainActivity"
-            android:label="@string/title_activity_main"
+            android:name="com.elkriefy.games.belote.activities.MainActivity"
+            android:label="@string/app_name"
             android:screenOrientation="landscape"
             android:theme="@style/AppTheme">
             <intent-filter>
